--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/tests/refData/test_config_files/test_config_2.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/tests/refData/test_config_files/test_config_2.yml
@@ -1,28 +1,35 @@
 # these are default settings that will be applied to any file uploads
 # in the upload_to_file_server and upload_to_triple_store sections
-upload_to_file_server:
-    - test_stage1
-upload_to_triple_store:
-    - test_stage2
+upload_settings:
+    upload_to_file_server:
+        - test_stage1
+    upload_to_triple_store:
+        - test_stage2
 # this section defines what type of files should be uploaded to the file server
 ocompchem:
-    upload_to_file_server:
-        - test_stage3
+    upload_settings:
+        upload_to_file_server:
+            - test_stage3
     handlers:
         qc_log_to_qc_json:
-            upload_to_file_server:
-                - test_stage4
+            upload_settings:
+                upload_to_file_server:
+                    - test_stage4
         oc_csv_to_oc_owl:
 test_results:
     ocompchem:
         handlers:
             qc_log_to_qc_json:
-                upload_to_file_server:
-                    - test_stage4
-                upload_to_triple_store:
-                    - test_stage2
+                upload_settings:
+                    upload_to_file_server:
+                        - test_stage4
+                    upload_to_triple_store:
+                        - test_stage2
+                query_settings: {}
             oc_csv_to_oc_owl:
-                upload_to_file_server:
-                    - test_stage3
-                upload_to_triple_store:
-                    - test_stage2
+                upload_settings:
+                    upload_to_file_server:
+                        - test_stage3
+                    upload_to_triple_store:
+                        - test_stage2
+                query_settings: {}
