--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
@@ -16,13 +16,13 @@
 # ------------------------------------------------------------------------------
 upload_settings:
     triple_store_sparql_endpoint: default_triple_store_sparql_endpoint
-    triple_store_secrets_file: default_triple_store_secrets_file
-    #triple_store_no_auth: False # if True, no athorisation is made and the
+    #triple_store_secrets_file: default_triple_store_secrets_file
+    triple_store_no_auth: False # if True, no athorisation is made and the
     #                            # triple store secrets file is not needed
     file_server_upload_endpoint: default_file_server_upload_endpoint
-    file_server_secrets_file: default_file_server_secrets_file
+    #file_server_secrets_file: default_file_server_secrets_file
     file_server_subdir: default_file_server_subdir
-    #file_server_no_auth: False # if True, no athorisation is made and the
+    file_server_no_auth: False # if True, no athorisation is made and the
     #                           # file server secrets file is not needed
     # These settings define which files would be uploaded to the file server and
     # or to the triple store by indicating the stages they belong to. These are
@@ -38,6 +38,26 @@ query_settings:
     omops_query_endpoint: omops_query_endpoint
     ocompchem_query_endpoint: ocompchem_query_endpoint
     opsscan_query_endpoint: opsscan_query_endpoint
+prefixes:
+    comp_pref: "http://www.theworldavatar.com/kb/ontocompchem/"
+    data_pref: "http://www.theworldavatar.com/data/ontocompchem/"
+    onto_comp: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl"
+    inst_spec: "http://www.theworldavatar.com/ontology/ontospecies/OntoSpecies.owl#Species"
+    has_spec: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl#hasUniqueSpecies"
+    gain_pref: "http://purl.org/gc/"
+    table_pref: "http://www.daml.org/2003/01/periodictable/PeriodicTable.owl"
+    unit_pref: "http://data.nasa.gov/qudt/owl/"
+    onto_spec: "http://www.theworldavatar.com/ontology/ontospecies/OntoSpecies.owl"
+    onto_mops: "http://www.theworldavatar.com/ontology/ontomops/OntoMOPs.owl"
+    rdf_pref: "http://www.w3.org/2000/01/rdf-schema"
+    kin_pref: "http://www.theworldavatar.com/ontology/ontokin/OntoKin.owl"
+    spec_pref: "http://www.theworldavatar.com/kb/ontospecies/"
+    mops_pref: "http://www.theworldavatar.com/kb/ontomops/"
+    uom_pref: "http://www.ontology-of-units-of-measure.org/resource/om-2/"
+    unres_pref: "http://theworldavatar.com/resource/ontouom/"
+    omops_entry_prefix: "MetalOrganicPolyhedra_"
+    pes_pref: "http://www.theworldavatar.com/kb/ontopesscan/"
+    onto_pes:  "http://www.theworldavatar.com/ontology/ontopesscan/OntoPESScan.owl"
 #
 # ------------------------------------------------------------------------------
 # PIPELINES
@@ -60,6 +80,8 @@ ocompchem:
             upload_settings:
                 upload_to_file_server:
                     - qc_log
+        qc_json_to_oc_json: {}
+        oc_json_to_oc_csv: {}
         oc_csv_to_oc_owl:
             upload_settings:
                 upload_to_triple_store:
@@ -74,6 +96,9 @@ ospecies:
     # OSPECIES HANDLERS
     #-----------------------------------------
     handlers:
+        qc_log_to_qc_json: {}
+        qc_json_to_os_json: {}
+        os_json_to_os_csv: {}
         os_csv_to_os_owl:
             upload_settings:
                 upload_to_triple_store:
@@ -92,6 +117,7 @@ omops:
             upload_settings:
                 upload_to_file_server:
                     - ominp_xyz
+        om_json_to_om_csv: {}
         om_csv_to_om_owl:
             upload_settings:
                 upload_to_triple_store:
@@ -106,6 +132,8 @@ opsscan:
     # OPSSCAN HANDLERS
     #-----------------------------------------
     handlers:
+        oc_json_to_ops_json: {}
+        ops_json_to_ops_csv: {}
         ops_csv_to_ops_owl:
             upload_settings:
                 upload_to_triple_store:
