Added a comment about the prefixes settings.

--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
@@ -39,6 +39,8 @@ query_settings:
     ocompchem_query_endpoint: ocompchem_query_endpoint
     opsscan_query_endpoint: opsscan_query_endpoint
 prefixes:
+    # these configs define any prefixes to be used when writing the aboxes
+    # the settings are then passed to the relevant handlers.
     comp_pref: "http://www.theworldavatar.com/kb/ontocompchem/"
     data_pref: "http://www.theworldavatar.com/data/ontocompchem/"
     onto_comp: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl"
