--- a/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
+++ b/ontology-tools/CMCLABoxManagement/chemaboxwriters/aboxwriters_config.yml
@@ -40,25 +40,32 @@ query_settings:
 prefixes:
     # these configs define any prefixes to be used when writing the aboxes
     # the settings are then passed to the relevant handlers.
-    comp_pref: "http://www.theworldavatar.com/kb/ontocompchem/"
-    data_pref: "http://www.theworldavatar.com/data/ontocompchem/"
+    #
+    # TWA ontology prefixes - needed for object and data properties
     onto_comp: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl"
+    onto_spec: "http://www.theworldavatar.com/ontology/ontospecies/OntoSpecies.owl"
+    onto_mops: "http://www.theworldavatar.com/ontology/ontomops/OntoMOPs.owl"
+    onto_pes:  "http://www.theworldavatar.com/ontology/ontopesscan/OntoPESScan.owl"
+    onto_kin: "http://www.theworldavatar.com/ontology/ontokin/OntoKin.owl"
+    # used to create iris of instances
+    spec_pref: "http://www.theworldavatar.com/kb/ontospecies/"
+    mops_pref: "http://www.theworldavatar.com/kb/ontomops/"
+    comp_pref: "http://www.theworldavatar.com/kb/ontocompchem/"
+    pes_pref: "http://www.theworldavatar.com/kb/ontopesscan/"
+    # used to create iris of instances of any reference files
+    # so far only defined for ontocompchem to reference associated log files
+    ocompchem_data_pref: "http://www.theworldavatar.com/data/ontocompchem/"
+    # other prefixes
     inst_spec: "http://www.theworldavatar.com/ontology/ontospecies/OntoSpecies.owl#Species"
     has_spec: "http://www.theworldavatar.com/ontology/ontocompchem/ontocompchem.owl#hasUniqueSpecies"
     gain_pref: "http://purl.org/gc/"
     table_pref: "http://www.daml.org/2003/01/periodictable/PeriodicTable.owl"
     unit_pref: "http://data.nasa.gov/qudt/owl/"
-    onto_spec: "http://www.theworldavatar.com/ontology/ontospecies/OntoSpecies.owl"
-    onto_mops: "http://www.theworldavatar.com/ontology/ontomops/OntoMOPs.owl"
     rdf_pref: "http://www.w3.org/2000/01/rdf-schema"
-    kin_pref: "http://www.theworldavatar.com/ontology/ontokin/OntoKin.owl"
-    spec_pref: "http://www.theworldavatar.com/kb/ontospecies/"
-    mops_pref: "http://www.theworldavatar.com/kb/ontomops/"
     uom_pref: "http://www.ontology-of-units-of-measure.org/resource/om-2/"
     unres_pref: "http://theworldavatar.com/resource/ontouom/"
     omops_entry_prefix: "MetalOrganicPolyhedra_"
-    pes_pref: "http://www.theworldavatar.com/kb/ontopesscan/"
-    onto_pes:  "http://www.theworldavatar.com/ontology/ontopesscan/OntoPESScan.owl"
+
 #
 # these setting can be used to pass extra named arguments to all the handlers.
 # please note that not all handlers may support the extra arguments. It is usually
