dev-ontop+geoserver: Improved the "generate_env_file.sh" script, including adding default settings.

--- a/Deploy/stacks/ontop+geoserver/.env_template
+++ b/Deploy/stacks/ontop+geoserver/.env_template
@@ -9,6 +9,9 @@ ONTOP_HOST=CONTAINER_HOST
 POSTGRES_HOST=CONTAINER_HOST
 GEOSERVER_HOST=CONTAINER_HOST
 
+DEFAULT_DATABASE=PROJECT_ID
+NETWORK_NAME=PROJECT_ID
+
 # Shared data directory
 SHARED_DATA_DIR_HOST=./shared_data
 SHARED_DATA_DIR=/data/inputs
