--- a/Deploy/stacks/ontop+geoserver/docker-compose.data_upload.yml
+++ b/Deploy/stacks/ontop+geoserver/docker-compose.data_upload.yml
@@ -20,6 +20,7 @@ services:
       g_TIF_ENABLED: 1
       CONFIG_DIR: ${SHARED_DATA_DIR}/config_files
       DATA_DIR: ${SHARED_DATA_DIR}
+      DB: ${DEFAULT_DATABASE}
       KEEP_ALIVE: "set"
     env_file:
       - .env
