--- a/Deploy/stacks/ontop+geoserver/docker-compose.servers.yml
+++ b/Deploy/stacks/ontop+geoserver/docker-compose.servers.yml
@@ -32,7 +32,7 @@ services:
       ONTOP_LAZY_INIT: '${ONTOP_LAZY_INIT}'
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
-      DB: "${WORKSPACE}"
+      POSTGRES_DB: "${DEFAULT_DATABASE}"
     env_file:
       - ontop/ontop.env
       - postgis/postgres.env
@@ -50,7 +50,6 @@ services:
     environment:
       POSTGRES_HOST_AUTH_METHOD: scram-sha-256
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
-      POSTGRES_DB: "${WORKSPACE}"
     env_file:
       - postgis/postgres.env
     ports:
@@ -61,6 +60,12 @@ services:
     volumes:
       - geotifs:${GEOTIF_DIR}
       - postgis_data:/var/lib/postgresql/data
+
+# The default network name is set using a docker-compose environment variable.
+# Please don't modify the contents of the 'networks' node below.
+networks:
+  default:
+    name: ${NETWORK_NAME}
 
 volumes:
   postgis_data: null
